--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
-  "name": "GomelAgroParts",
+  "name": "gomelagroparts",
   "version": "0.0.1",
+  "description": "gomelagroparts",
   "main": "server.js",
+  "dependencies": {
+    "express": "~3.4.8"
+  },
+  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -13,9 +19,5 @@
   "license": "BSD",
   "bugs": {
     "url": "https://github.com/n8m/gomelagroparts/issues"
-  },
-  "dependencies": {
-    "express": "~3.4.8",
-    "node-static": "~0.7.3",
   }
 }
